core/src/test/resources/configurations/invalid/instanceof-imbricated-invalid-property.instances
instanceof vm {
	name: my-vm;
	instanceof server {
		name=
	}
}
